fixes IE letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -208,3 +208,18 @@ body {
         margin: 1.35em 0 -1em 0;
         text-align: center;
     }
+
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+body {
+  width: 100%;
+  height: 100%;
+  font: 700 1em "News Cycle", sans-serif;
+  letter-spacing: .08em;
+  color: #ff6;
+  background: #000;
+  overflow: hidden;
+  margin: 0;
+}
+
+}
